# Pyrox

./: .env.example  .env.production  .gitignore  .pylintrc  ENVIRONMENT.md  LICENSE  README.md  TODO.md  __demo__.py  __main__.py  __test__.py  analyze_eplan_data.py  analyze_eplan_dump.py  build.bat  build.ps1  build.sh  code_todos.md  controller.L5X  debug_deep_explore.py  debug_explore_project.py  deploy.ps1  deploy.sh  dist.sh  final_eplan_analysis.py  install-functions.sh  install.sh  pyproject.toml  quick_eplan_inspector.py  requirements.txt  scratch.py  start.bat  test.sh  utils.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: sync-readme.yml  sync-version.yml  test.yml
docs/: .env.example  ARCHITECTURE_GUIDE.md  ConnectionEditor.md  QUICK_REFERENCE.py  _design_util.xlsm  _gm_controller.json  _params.json  todo.txt
docs/controls/: _aoi.L5X  _datatype.L5X  _datatype_member.L5X  _module.L5X  _program.L5X  _routine.L5X  _rung.L5X  _tag.L5X  _test_gm.L5X_report.JSON  asdf.L5X  logix.v2_1_0.l32e.ACD  mytest.L5X  playtest.L5X  root.ACD  root.L5X  unittest.ACD  unittest.D90.MH8243.BAK007.acd  unittest.D90.MH8243.BAK008.acd  unittest.D90.MH8243.BAK009.acd  unittest.D90.MH8243.BAK010.acd  unittest.D90.MH8243.BAK011.acd  unittest.D90.MH8243.BAK012.acd  unittest.L5X  unittest_output.L5X  unittestdemo.L5X
examples/: connection_editor_example.py
hooks/: pre-commit
pyrox/: __init__.py  __main__.py  application.py  test_utils.py  utils.py
pyrox/applications/: __init__.py  app.py  connection.py  copilot.py  emulation.py  eplan.py  ford.py  generator.py  gm.py  indicon.py  inspect.py  ladder.py  plcio.py  test_applications.py  validator.py
pyrox/interfaces/: README.md  __init__.py  application.py  connection.py  constants.py  events.py  integration.py  physics.py  protocols.py  scene.py  services.py
pyrox/models/: __init__.py  app_configuration.py  application.py  connection.py  emu.py  emulation.py  eplan.py  factory.py  generator.py  gm_hmi.py  inspect.py  list.py  menu.py  meta.py  model.py  network.py  protocols.py  runtime.py  save.py  scene.py  services.py  task.py  test_models.py  view.py  viewmodel.py
pyrox/services/: __init__.py  archive.py  bit.py  bus.py  byte.py  canvas.py  checklist.py  class_services.py  collision.py  connection.py  debug.py  dict.py  dictionary_services.py  dir_services.py  directory.py  emu.py  env.py  environment.py  eplan.py  factory.py  file.py  file_services.py  fuzzy.py  gui.py  id.py  logging.py  logic.py  menu_registry.py  notify_services.py  object.py  physics.py  plc.py  plc_services.py  process.py  progress.py  reg.py  registry.py  scene.py  search.py  stream.py  (+7 more)
pyrox/tasks/: __init__.py  builtin.py  examples.py  generate.py  ladder.py  sceneviewer.py  test_tasks.py  trev_trev.py  (+1 more)
utils/: check_version_increment.py  extract_todos.py  setup_hooks.py  sync_readme.py  sync_version.py
(+376 files in other folders)
