[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Pyrox"
version = "1.2.4"
authors = [
  { name="Brian LaFond", email="Brian.L.LaFond@gmail.com" },
]
description = "irox implimentation of tkinter in the form of a modifiable application with models."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "lxml",
  "openpyxl",
  "pandas",
  "platformdirs",
  "pyinstaller",
  "pylogix",
  "pytest",
  "ttkthemes",
  "xmltodict",
  
]

license = {file = "LICENSE"}
keywords = ["python", "tkinter", "api"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(name)s | %(levelname)s | %(message)s"
log_cli_date_format = "%m/%d/%Y, %H:%M:%S"

[project.urls]
Homepage = "https://github.com/iroxusux/Pyrox"
Issues = "https://github.com/iroxusux/Pyrox/issues"